# nx-bazel-example

./: .angular-cli.json  .gitignore  .prettierrc  BUILD.bazel  README.md  WORKSPACE  package-lock.json  package.json  tsconfig.json
apps/car-list/e2e/: app.e2e-spec.ts  tsconfig.e2e.json
apps/car-list/src/: BUILD.bazel  index.html  main.ts  require.config.js  tsconfig.app.json
apps/car-list/src/app/: BUILD.bazel  app.component.html  app.component.spec.ts  app.component.ts  app.module.ts  index.d.ts
backend/: BUILD
backend/src/: CarsServlet.java
backend/webapp/: index.html
backend/webapp/WEB-INF/: web.xml
libs/api/src/: BUILD.bazel  car.d.ts  car.proto
libs/cars-footer/src/: BUILD.bazel  cars-footer.component.ts  cars-footer.module.ts
tools/: bazel.rc
tools/protobufjs/: BUILD.bazel  package.json  ts_proto_library.bzl
