load("@angular//:index.bzl", "ng_module")
load("@build_bazel_rules_typescript//:defs.bzl", "ts_devserver")

package(default_visibility = ["//visibility:public"])

ng_module(
    name = "src",
    srcs = glob(["main.ts"]),
    deps = [
        "//apps/car-list/src/app",
        "@rxjs",
    ],
)

# Needed because the devserver only loads static files that appear under this
# package.
genrule(
    name = "zone.js",
    srcs = ["//:node_modules/zone.js/dist/zone.min.js"],
    outs = ["zone.min.js"],
    cmd = "cp $< $@",
)

genrule(
    name = "protobuf.js",
    srcs = ["//tools/protobufjs:node_modules/protobufjs/dist/minimal/protobuf.min.js"],
    outs = ["protobuf.min.js"],
    cmd = "cp $< $@",
)

STATIC_FILES = [
    "favicon.ico",
    "index.html",
    "styles.css",
    ":zone.js",
    ":protobuf.js",
]

ts_devserver(
    name = "devserver",
    data = [
        "//apps/car-list/src/assets",
        "//backend",
    ],
    entry_module = "cars/apps/car-list/src/main",
    scripts = [":require.config.js", "//:angular_bundles"],
    serving_path = "/bundle.min.js",
    static_files = STATIC_FILES,
    deps = [":src"],
)
