package(default_visibility = ["//visibility:public"])

load("//tools/protobufjs:ts_proto_library.bzl", "ts_proto_library")

ts_proto_library(
    name = "car_ts_proto",
    srcs = ["car.proto"],
)

java_proto_library(
    name = "car_java_proto",
    deps = [":car_proto"],
)

proto_library(
    name = "car_proto",
    srcs = ["car.proto"],
)
